try fixing the vertical alignment

--- a/assets/stylesheets/donations.scss
+++ b/assets/stylesheets/donations.scss
@@ -92,7 +92,6 @@
 }
 #thanks-folks tbody a {
   display: inline-block;
-  height: 26px;
   vertical-align: middle;
   color: #666;
   text-decoration: underline;
